<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:titleTextColor="@color/white"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:title="Add Vault"/>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilVaultName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etVaultName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vault_name"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_vault_type"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/textPrimary"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_small"/>

            <Spinner
                android:id="@+id/spinnerVaultType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_vault_card"
                android:padding="@dimen/padding_medium"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMonthlyLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMonthlyLimit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/monthly_limit"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSaveVault"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btn_save_vault"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/white"
                android:background="@drawable/bg_payment_button"
                android:layout_marginTop="@dimen/margin_large"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>